# masterclass-first-agent

./: .env.example  .gitignore  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
data/: intelliforge-faq.md
deploy/: Dockerfile  fly.toml
docs/: EMBED.md
reference/solutions/: agent_v1_tools.py  agent_v2_rag.py  server.py
scripts/: deploy-fly.ps1  deploy-fly.sh  ingest.py  preflight.py  smoke_test.py
src/: __init__.py  agent_v0_chatbot.py  agent_v1_tools.py  agent_v2_rag.py  llm.py  server.py  tools.py
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/design-system/first-agent/: MASTER.md
web/public/: embed.js  llms-full.txt  llms.txt
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/embed/: layout.tsx  page.tsx
web/src/components/: AnswerCard.tsx  ChatInterface.tsx  ColdStartIndicator.tsx  EmbedPanel.tsx  QuestionInput.tsx  SampleQuestions.tsx  StatusDot.tsx
web/src/lib/: api.ts  samples.ts
