[project]
name = "masterclass-first-agent"
version = "0.1.0"
description = "Build Your First AI Agent in 3 Hours - IntelliForge masterclass starter repo"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "IntelliForge", email = "hello@intelliforge.tech" },
]
dependencies = [
    "openai>=1.54.0",
    "python-dotenv>=1.0.1",
    "simpleeval>=1.0.0",
    "pypdf>=5.1.0",
    "chromadb>=0.5.20",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
